--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
         "maennchen/zipstream-php": "^2.1",
+        "mews/purifier": "^3.4",
         "phpoffice/phpspreadsheet": "^1.30"
     },
     "require-dev": {
